Refactor response dto mapper
